<resources>
    <string name="app_name">Android X</string>
    <string name="welcome_msg">Welcome! %1s</string>

    <!-- SignIn Activity -->
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_sign_up_email">Sign In or Sign Up</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="email_or_google">or use your Google Account</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="forgot_password">Forgot password?</string>

    <!-- Forgot password Activity -->
    <string name="your_email">Type your email</string>
    <string name="reset_password" translatable="false">Reset Password</string>

    <!-- Navigation Drawer menu lables -->
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home" translatable="false">Home</string>
    <string name="account" translatable="false">Account</string>
    <string name="options">Options</string>
    <string name="profile_image">Profile image</string>
    <string name="add_course">Add Course</string>
    <string-array name="navigation_array">
        <item>Home</item>
        <item>Add Schedule</item>
        <item>Add Course to favorites</item>
        <item>Options</item>
    </string-array>

    <!-- General -->
    <string name="cause_crash">Cause Crash</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="enter_the_degree_course">Enter the degree course</string>
    <string name="delete">Delete</string>
    <string name="invitation_cta" translatable="false">Call to action</string>
    <string name="uni_list">Universities</string>
    <string name="save_schedule">Save schedule</string>
    <string name="enter_class">Enter the class</string>
    <string name="school_subject">Enter the school subject</string>
    <string name="choose_time">Choose the time</string>
    <string name="add_schedule">Add schedule</string>
    <string name="change_options">Change options</string>
    <string name="enter_university">Enter the university</string>
    <string name="enter_faculty">Enter the faculty</string>
    <string name="add">Add</string>
    <string name="required">Required</string>
    <string name="got_it">Got it</string>
    <string name="email_sent">An email was sent to yuor address.</string>
    <string name="email_not_sent">Email not sent</string>
    <string name="no" translatable="false">No</string>
    <string name="yes">Yes</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="at_least_6_chars">At least 6 characters</string>
    <string name="wrong_end_time">The ending time should be greater than the beginning time</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="forward">Forward</string>
    <string name="ok">Ok</string>

    <string-array name="daysArray">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <!-- Home Fragment -->
    <string name="do_you_want_delete_this_schedule">Do you want to delete %1s schedule?</string>

    <!-- Options Fragment -->

    <!-- University -->
    <string name="university_error">University field is empty</string>
    <string name="university_empty">To use this app and have a great experience you must necessarily choose a university</string>
    <string name="university_not_found">University not found</string>
    <string name="university_not_found_add">University not found, do you want to add it?</string>
    <string name="university_select_another">Select another university</string>
    <!-- Faculty -->
    <string name="faculty_error">Faculty field is empty</string>
    <string name="faculty_empty">To use this app and have a great experience you must necessarily choose a faculty</string>
    <string name="faculty_not_found">Faculty not found</string>
    <string name="faculty_not_found_add">Faculty not found, do you want to add it?</string>
    <string name="faculty_select_another">Select another faculty</string>

    <!-- Degree course -->
    <string name="degree_course_error">Degree course field is empty</string>
    <string name="degree_course_empty">To use this app and have a great experience you must necessarily choose a  Degree course</string>
    <string name="degree_course_not_found">Degree course not found</string>
    <string name="degree_course_not_found_add">Degree course not found, do you want to add it?</string>
    <string name="degree_course_select_another">Select another degree course</string>

    <!-- Add school subject fragment -->
    <string name="do_not_want_to_follow_anymore">Do not want to follow %1s anymore?</string>
    <string name="school_subject_error">School subject error</string>
    <string name="school_subject_empty">School subject is empty</string>
    <string name="add_school_subject_button">Add course</string>
    <string name="add_course_label">Type the course</string>
    <string name="select_the_day">Select the day</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="hint">hint</string>
    <string name="hour">HOUR</string>
    <string name="minutes">MINUTES</string>
    <string name="cancel">CANCEL</string>
    <string name="Wednesday">Wednesday</string>

</resources>
