<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/home" />
        <item
            android:id="@+id/add_schedule"
            android:icon="@drawable/ic_date_range_black_24px"
            android:title="@string/add_schedule" />
        <item
            android:id="@+id/add_school_subject"
            android:icon="@drawable/ic_library_books_black_24px"
            android:title="@string/add_course"/>
        <item
            android:id="@+id/options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>
<!--
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
-->
</menu>
