<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 'Time' section -->
        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TimePicker>

        <!-- 'Day' section -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:shrinkColumns="*">

            <ToggleButton
                android:id="@+id/tglBtn_M"
                style="@style/ToggleButtonStyle"
                android:textOff="@string/monday"
                android:textOn="@string/monday" />

            <ToggleButton
                android:id="@+id/tglBtn_T"
                style="@style/ToggleButtonStyle"
                android:textOff="@string/tuesday"
                android:textOn="@string/tuesday" />


            <ToggleButton
                android:id="@+id/tglBtn_W"
                style="@style/ToggleButtonStyle"
                android:textOff="@string/wednesday"
                android:textOn="@string/wednesday" />

            <ToggleButton
                android:id="@+id/tglBtn_Th"
                style="@style/ToggleButtonStyle"
                android:textOff="@string/thursday"
                android:textOn="@string/thursday" />

            <ToggleButton
                android:id="@+id/tglBtn_F"
                style="@style/ToggleButtonStyle"
                android:textOff="@string/friday"
                android:textOn="@string/friday" />

            <ToggleButton
                android:id="@+id/tglBtn_S"
                style="@style/ToggleButtonStyle"
                android:textOff="@string/saturday"
                android:textOn="@string/saturday" />

        </TableRow>


        <ListView
            android:id="@+id/lstv_subjectSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>

    </LinearLayout>

    <!-- Section save/cancel buttons  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveIT" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>



</RelativeLayout>