<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.walkap.x_android.fragment.AddScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/classroomTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/enter_class"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/classroomEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewSchoolSubjectTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/school_subject"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/schoolSubjectEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="16sp" />



            <TextView
                android:id="@+id/textViewSelectDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="@string/select_the_day"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/toggleButton1"
                    style="@style/ToggleButtonStyle"
                    android:layout_weight="1"
                    android:textColor="@color/toogle_text"
                    android:textOff="@string/monday"
                    android:textOn="@string/monday" />

                <ToggleButton
                    android:id="@+id/toggleButton2"
                    style="@style/ToggleButtonStyle"
                    android:layout_weight="1"
                    android:textColor="@color/toogle_text"
                    android:textOn="@string/tuesday"
                    android:textOff="@string/tuesday" />

                <ToggleButton
                    android:id="@+id/toggleButton3"
                    style="@style/ToggleButtonStyle"
                    android:layout_weight="1"
                    android:textColor="@color/toogle_text"
                    android:textOn="@string/wednesday"
                    android:textOff="@string/wednesday" />

                <ToggleButton
                    android:id="@+id/toggleButton4"
                    style="@style/ToggleButtonStyle"
                    android:layout_weight="1"
                    android:textColor="@color/toogle_text"
                    android:textOn="@string/thursday"
                    android:textOff="@string/thursday" />

                <ToggleButton
                    android:id="@+id/toggleButton5"
                    style="@style/ToggleButtonStyle"
                    android:layout_weight="1"
                    android:textColor="@color/toogle_text"
                    android:textOn="@string/friday"
                    android:textOff="@string/friday" />

                <ToggleButton
                    android:id="@+id/toggleButton6"
                    style="@style/ToggleButtonStyle"
                    android:layout_weight="1"
                    android:textColor="@color/toogle_text"
                    android:textOn="@string/saturday"
                    android:textOff="@string/saturday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    style="@style/FirebaseUI.Button"
                    android:layout_weight="1"
                    android:onClick="addScheduler"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/forward"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
