<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.walkap.x_android.activity.ChooseLessonTimeActivity"
    tools:showIn="@layout/app_bar_add_schedule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />


        <Button
            android:id="@+id/saveButton"
            style="@style/FirebaseUI.Button"
            android:layout_marginTop="8dp"
            android:onClick="saveScheduler"
            android:text="@string/save_schedule" />

    </LinearLayout>

</FrameLayout>